# py-binding-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh  vcvars2019.ps1
src/: binding.cpp  library.cpp  library.h
